<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_utilities</name>
  <version>0.1.0</version>
  <description>Implements Various Pointcloud Processing Services</description>
  <maintainer email="Christian_Tagliamonte@student.uml.edu">Christian Tagliamonte</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_utility_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
